Fix Android URL encoder compatibility (#587)